# videomt

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
datasets/: README.md
docs/: index.html
model_zoo/: dinov2.md  evaluation.md  segmenter_checkpoints.md  visualization.md
