[project]
name = "videomt"
version = "0.1.0"
description = "VidEoMT: Video Encoder-only Mask Transformer"
requires-python = ">=3.12"
dependencies = [
    "detectron2",
    "einops>=0.8.2",
    "fvcore>=0.1.5.post20221221",
    "h5py>=3.15.1",
    "imagesize>=1.4.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "panopticapi",
    "pillow>=12.1.1",
    "pycocotools>=2.0.11",
    "pytorch-lightning>=2.6.1",
    "scikit-image>=0.26.0",
    "scipy>=1.17.1",
    "shapely>=2.1.2",
    "submitit>=1.5.4",
    "tabulate>=0.9.0",
    "timm>=1.0.25",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
    "transformers>=5.2.0",
    "wandb>=0.25.0",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu130" }]
torchvision = [{ index = "pytorch-cu130" }]
detectron2 = { path = "C:\\Users\\yuta\\AppData\\Local\\Temp\\detectron2" }
panopticapi = { git = "https://github.com/cocodataset/panopticapi" }

[tool.uv]
no-build-isolation-package = ["detectron2"]
